crates/oxc_react_compiler/tests/snapshots/try-catch-within-function-expression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/try-catch-within-function-expression.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	const callback = _temp;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = callback();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	try {
		return [];
	} catch (t0) {
		return;
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
