crates/oxc_react_compiler/tests/snapshots/try-catch.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/try-catch.js
---
import { c as _c } from "react/compiler-runtime";
const { throwErrorWithMessage } = require("shared-runtime");
function Component(props) {
	const $ = _c(1);
	let x;
	try {
		let t0;
		if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
			t0 = throwErrorWithMessage("oops");
			$[0] = t0;
		} else {
			t0 = $[0];
		}
		x = t0;
	} catch {
		x = null;
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
