crates/oxc_react_compiler/tests/snapshots/ts-enum-inline-block-scopes.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/ts-enum-inline-block-scopes.tsx
---
function Component() {
	let first;
	let second;
	{
		enum NumberValue {
			Value = 1
		}
		first = NumberValue;
	}
	{
		enum NumberValue {
			Value = 2
		}
		second = NumberValue;
	}
	return <span>{first === second ? "same" : "different"}</span>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
